--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</div>
 	<div id="bodyContainer" class="container">
 		<div class="row" >
-			<div class="col-xs-12">
+			<div id="buttonsContainer" class="col-xs-12">
 				<div class="myButton">
 					Luke Skywalker
 				</div>
@@ -67,6 +67,11 @@
 						</div>
 					</div>
 				</form>
+			</div>
+		</div>
+		<div class="row">
+			<div id="giphsContainer" class="col-xs-12">
+
 			</div>
 		</div>
 	</div>
