more small bug fixes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 			<div class="col-xs-12">
 				<form class="container-fluid">
 					<div class="row myFormRow">
-						<div class="input-group col-xs-6">
+						<div class="input-group col-xs-12 col-sm-12 col-md-6 col-lg-6">
 						  <label for="categoryInpputId">New Gif Category</label>
-						  <input id="categoryInputId" name="categoryInput" type="text" class="form-control input-lg" placeholder="Millenium Falcon">
+						  <input id="categoryInputId" name="categoryInput" maxlength="30" type="text" class="form-control input-lg" placeholder="Millenium Falcon">
 						</div>
 					</div>
 					<div class="row myFormRow">
